# capstone

./: README.md
backend/: Dockerfile  pyproject.toml  requirements.txt  test_ingest.py
backend/commands/: db.txt  deploy.txt  lazy_eager.txt  uv.txt
backend/migrations/: env.py
backend/src/: __init__.py  config.py
backend/src/ai_core/: chat.py  config.py  router.py  schema.py  store.py
backend/src/ai_core/chroma_db/: chroma.sqlite3
backend/src/db/: redis.py  session.py
backend/src/middleware/: cors_validation.py  error_response_wrapper.py  logging_middleware.py  rate_limiting_middleware.py  security.py  success_response_wrapper.py  whitelisting_middleware.py
backend/src/models/: __init__.py  base.py  useragent.py
backend/src/objects/agents/: model.py  router.py  schema.py
backend/src/objects/authentication/: operations.py  router.py  schema.py
backend/src/objects/messages/: model.py  operations.py  router.py  schema.py
backend/src/objects/user/: model.py  router.py  schema.py
backend/src/shared/: exceptions.py  helper.py  override_docs.py  response_structure.py  schema_output.py
backend/src/shared/dependency/: passwords.py
backend/src/shared/dependency/jwt/: model.py  operations.py  schema.py
backend/src/shared/dependency/otp/: model.py  operations.py
backend/src/shared/services/: db_service.py  email_service.py  redis_service.py  sql.py
backend/src/shared/services/cloudinary/: config.py  file_router.py  fileservice.py  image_model.py
backend/src/shared/utils/: data_check.py  db_check.py  email_temp.html  regions.py
frontend/: README.md  pubspec.yaml
frontend/android/app/: build.gradle.kts
frontend/android/app/src/main/: AndroidManifest.xml
frontend/android/app/src/main/kotlin/com/example/foodlife/: MainActivity.kt
frontend/ios/Runner/: Info.plist
frontend/ios/Runner.xcodeproj/: project.pbxproj
frontend/linux/: CMakeLists.txt
frontend/linux/runner/: my_application.cc
frontend/macos/Runner.xcodeproj/: project.pbxproj
frontend/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
frontend/macos/Runner/Configs/: AppInfo.xcconfig
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
frontend/windows/: CMakeLists.txt
frontend/windows/runner/: Runner.rc  main.cpp
model/: app.py  requirements.txt
